--- a/usprebooter/Info.plist
+++ b/usprebooter/Info.plist
@@ -2,7 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>TSPreAppliedExploitType</key>
-	<integer>2</integer>
+    <key>TSPreAppliedExploitType</key>
+    <integer>2</integer>
+    <key>MinimumOSVersion</key>
+    <string>17.0</string>
 </dict>
 </plist>
